--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Web Developer">
+	<meta name="description" content="Web Developer, Hong Kong">
 	<meta name="author" content="Ken Wong">
+
+	<!-- Facebook Open Graph tags -->
+	<meta property="og:url" content="http://kenwong.ga/">
+	<meta property="og:title" content="Ken Wong">
+	<meta property="og:site_name" content="Ken Wong - Web Developer">
+	<meta property="og:description" content="Web Developer, Hong Kong">
+	<meta property="og:image" content="http://i.imgur.com/ZuDiocs.png">
+	<meta property="og:image:secure_url" content="https://i.imgur.com/ZuDiocs.png">
 
 	<title>Ken Wong - Web Developer</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Local CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/png" href="http://i.imgur.com/zduUlHs.png">
-
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
 </head>
 <body>
 	<!-- Navigation -->
@@ -73,125 +73,7 @@
 	<!-- /.intro-header -->
 
 	<!-- Page Content -->
-	<section id="gallery" class="section-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-lg-5">
-					<h2 class="section-heading">Timing</h2>
-
-					<p class="lead">Timing is a book store located in The Chinese University of Hong Kong.</p>
-
-					<p class="lead">The website is not only an online store but also a platform for readers to record, share, and discuss their own reading journey.</p>
-
-					<p class="lead">
-						Screenshots:
-						<a href="http://i.imgur.com/Wnrr5DB.png" data-lightbox="timing" data-title="Timing #01">(Click)</a>
-						<a href="http://i.imgur.com/Yru8SqV.png" data-lightbox="timing" data-title="Timing #02" class="hide"></a>
-						<a href="http://i.imgur.com/jATjVqc.png" data-lightbox="timing" data-title="Timing #03" class="hide"></a>
-						<a href="http://i.imgur.com/lSNd6w8.png" data-lightbox="timing" data-title="Timing #04" class="hide"></a>
-						<a href="http://i.imgur.com/m3UI3ae.png" data-lightbox="timing" data-title="Timing #05" class="hide"></a>
-						<a href="http://i.imgur.com/HASzvni.png" data-lightbox="timing" data-title="Timing #06" class="hide"></a>
-					</p>
-
-					<p>
-						<code>PHP</code>
-						<code>MySQL</code>
-						<code>WordPress</code>
-						<code>WooCommerce</code>
-					</p>
-				</div>
-				<div class="col-sm-6 col-lg-5 col-lg-offset-2">
-					<img class="img-responsive img-shadowed" src="http://i.imgur.com/iNml8G9.png" alt="(Timing)">
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="section-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-lg-5 col-lg-offset-1 col-sm-push-6">
-					<h2 class="section-heading">Urban Studies</h2>
-
-					<p class="lead">Urban Studies is a undergraduate programme of <a href="http://www.cuhk.edu.hk">The Chinese University of Hong Kong</a>, jointly offered by <a href="http://www.arch.cuhk.edu.hk">School of Architecture</a> and <a href="http://www.grm.cuhk.edu.hk/eng/">Department of Geography and Resource Management</a>.</p>
-
-					<p class="lead">
-						Preview Site:
-						<a href="http://113.52.134.170/fuel" target="_blank">http://113.52.134.170/fuel</a>
-						<br>
-						Screenshots:
-						<a href="http://i.imgur.com/ugSfIWR.png" data-lightbox="urbanstudies" data-title="Urban Studies #01">(Click)</a>
-						<a href="http://i.imgur.com/To7ndvV.png" data-lightbox="urbanstudies" data-title="Urban Studies #02" class="hide"></a>
-						<a href="http://i.imgur.com/n88Lvln.png" data-lightbox="urbanstudies" data-title="Urban Studies #03" class="hide"></a>
-						<a href="http://i.imgur.com/ncBU1Yw.png" data-lightbox="urbanstudies" data-title="Urban Studies #04" class="hide"></a>
-						<a href="http://i.imgur.com/VfESg2v.png" data-lightbox="urbanstudies" data-title="Urban Studies #05" class="hide"></a>
-					</p>
-
-					<p>
-						<code>PHP</code>
-						<code>MySQL</code>
-						<code>CodeIgniter</code>
-						<code>FUEL CMS</code>
-					</p>
-				</div>
-				<div class="col-sm-6 col-lg-5 col-sm-pull-6">
-					<img class="img-responsive img-shadowed" src="http://i.imgur.com/tsba2lp.png" alt="(Urban Studies)">
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="section-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-lg-5">
-					<h2 class="section-heading">Pop Up Press</h2>
-
-					<p class="lead">Pop Up Press! is a graphic art promotion scheme hosted by <a href="http://www.open-printshop.org.hk" target="_blank">Hong Kong Open Printshop</a>, which is financially supported by the <a href="http://www.hab.gov.hk/en/policy_responsibilities/arts_culture_recreation_and_sport/acdfs.htm" target="_blank">Arts Capacity Development Funding Scheme</a> of HKSAR Government.</p>
-
-					<p class="lead">
-						Live Site:
-						<a href="http://www.open-printshop.org.hk/popuppress" target="_blank">http://www.open-printshop.org.hk/popuppress</a>
-					</p>
-
-					<p>
-						<code>PHP</code>
-						<code>MySQL</code>
-						<code>WordPress</code>
-						<code>WooCommerce</code>
-					</p>
-				</div>
-				<div class="col-sm-6 col-lg-5 col-lg-offset-2">
-					<img class="img-responsive img-shadowed" src="http://i.imgur.com/pTuUxTN.png" alt="(Pop Up Press)">
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="section-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-lg-5 col-lg-offset-1 col-sm-push-6">
-					<h2 class="section-heading">Let it Yo!</h2>
-
-					<p class="lead">A set of Christmas-themed mini games, as a Christmas promotion for <a href="http://wppd.co" target="_blank">Warmpaper Design</a>.</p>
-
-					<p class="lead">
-						Live Site:
-						<a href="http://wppd.co/let-it-yo" target="_blank">http://wppd.co/let-it-yo</a>
-					</p>
-
-					<p>
-						<code>PHP</code>
-						<code>MySQL</code>
-					</p>
-				</div>
-				<div class="col-sm-6 col-lg-5 col-sm-pull-6">
-					<img class="img-responsive img-shadowed" src="http://i.imgur.com/BxcRg0q.png" alt="(Let it Yo!)">
-				</div>
-			</div>
-		</div>
-	</section>
+	<section id="gallery"></section>
 
 	<section id="contact" class="section-contact">
 		<div>
@@ -234,9 +116,8 @@
 	</footer>
 
 	<!-- Script -->
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 	<script>
 	$('body').delegate('[data-toggle="scroll"]', 'click', function(event) {
